# py-simple-audio

./: pyproject.toml
.github/workflows/: pythonpackage.yml  wheels.yml
